# beancount-telegram-bot

./: .env.example  .gitignore  Dockerfile  README.md  compose.yml.example  pyproject.toml
app/: cli.py  config.py  main.py  routes.py
app/models/: telegram.py
app/services/: beancount_service.py  deepseek.py  fava_manager.py  llm.py  message_processor.py  statement_extractor.py  telegram.py
app/storage/: database.py
tests/: test_beancount_service.py
