[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.venv]
path = "venv"
in_project = true

[project]
name = "beancount-telegram-bot"
version = "0.1.0"
description = "FastAPI backend for a Telegram bot integrating DeepSeek and Beancount."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Arys", email = "arys@example.com" }
]
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.1",
  "httpx>=0.28.1",
  "beancount>=2.3.5",
  "fava>=1.26",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "aiosqlite>=0.20.0",
  "pymupdf>=1.26.6",
  "pandas>=2.3.3",
  "openai>=2.7.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.4.0",
  "mypy>=1.9.0",
  "PyPDF2>=3.0.1"
]

[project.scripts]
runserver = "app.cli:main"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.4.0",
  "mypy>=1.9.0",
  "PyPDF2>=3.0.1"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
